# vostiraview

./: .SRCINFO  PKGBUILD  README.md  config.py  config.txt  crop.py  exif_dialog.py  gallery.py  i18n.py  list_view.py  pyproject.toml  readme.html  readme.md  readme.txt  resize.py  rotation.py  shortcuts_dialog.py  start.sh  utils.py  vostiraview.desktop  vostiraview.py
modules/: batch_processor.py  clipboard_handler.py  directory_watcher.py  exif_handler.py  file_operations.py  gallery_handler.py  help_handler.py  image_export.py  image_loader.py  image_operations.py  init.py  search_handler.py  slideshow_handler.py  trash.py  undo_manager.py  zoom_handler.py
ui/: __init__.py  adjust_dialog.py  batch_dialog.py  icons.py  init.py  main_window.py  settings_dialog.py  trash_dialog.py
